<resources>
    <string name="app_name">Electro</string>
    <string name="logo_image">logo Image</string>
    <string name="cartbutton">cartButton</string>
    <string name="login_button">login button</string>
    <string name="search">SEARCH</string>
    <string name="image_of_the_shop">image of the shop</string>
    <string name="text1">Shop and Buy Online.</string>
    <string name="shop_and_buy_online">Shop and Buy Online.</string>
    <string name="text2">Name</string>
    <string name="phones_headphones_phone_covers_charges_and_all_the_othe_mobile_accessories_at_one_place">Phones, HeadPhones, Phone Covers, Charges and all the othe Mobile accessories at one place.</string>
    <string name="brands">brands</string>
    <string name="search_button">search button</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="item5">item5</string>
    <string name="more1">MORE</string>
    <string name="more2">MORE</string>
    <string name="more3">MORE</string>
    <string name="more4">MORE</string>
    <string name="more5">MORE</string>
    <string name="cart">cart</string>
    <string name="login">login</string>
    <string name="logo">logo</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="back">Back</string>
    <string name="item_image">item image</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="price">PRICE</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="your_basket">YOUR BASKET</string>
    <string name="item">ITEM</string>
    <string name="background">background</string>
</resources>