<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="647dp"
        android:layout_height="1543dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background8" />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="189dp"
        android:layout_height="33dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintBottom_toTopOf="@+id/searchList"
        app:layout_constraintEnd_toStartOf="@+id/login1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background3__3_" />

    <ImageButton
        android:id="@+id/cart1"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/cartbutton"
        app:layout_constraintBottom_toTopOf="@+id/searchbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart" />

    <ImageButton
        android:id="@+id/login1"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/login_button"
        app:layout_constraintBottom_toTopOf="@+id/searchbtn"
        app:layout_constraintEnd_toStartOf="@+id/cart1"
        app:layout_constraintStart_toEndOf="@+id/logo1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <SearchView
        android:id="@+id/searchList"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:background="#8A9AB5"
        android:baselineAligned="true"
        android:iconifiedByDefault="false"
        android:queryHint="search item here"
        app:layout_constraintEnd_toStartOf="@+id/searchbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo1" />

    <Button
        android:id="@+id/searchbtn"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:background="@drawable/searchbtn"
        android:text="@string/search"
        android:textColor="#FBF9F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchList"
        app:layout_constraintTop_toBottomOf="@+id/cart1" />

    <ImageView
        android:id="@+id/shopimage"
        android:layout_width="435dp"
        android:layout_height="333dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/image_of_the_shop"
        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchList"
        app:srcCompat="@drawable/shop" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="197dp"
        android:layout_height="28dp"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="127dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:text="@string/shop_and_buy_online"
        android:textColor="#101010"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopimage"
        tools:text="Shop and Buy Online." />

    <TextView
        android:id="@+id/text2"
        android:layout_width="408dp"
        android:layout_height="72dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/phones_headphones_phone_covers_charges_and_all_the_othe_mobile_accessories_at_one_place"
        android:textColor="#151515"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="421dp"
        android:layout_height="209dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/brands"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:srcCompat="@drawable/brands" />



</androidx.constraintlayout.widget.ConstraintLayout>