<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".item">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="829dp"
        android:layout_height="1531dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/background8" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="189dp"
        android:layout_height="33dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background3__3_" />

    <ImageButton
        android:id="@+id/cart"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:contentDescription="@string/cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart" />

    <ImageButton
        android:id="@+id/login"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:layout_marginStart="143dp"
        android:layout_marginLeft="143dp"
        android:contentDescription="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/cart"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:background="#8A9AB5"
        android:iconifiedByDefault="false"
        android:queryHint="search item here"
        app:layout_constraintEnd_toStartOf="@+id/searchbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/searchbtn"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:background="@drawable/searchbtn"
        android:text="@string/search"
        android:textColor="#FBF9F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/cart" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="147dp"
        android:layout_height="173dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/item_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:srcCompat="@drawable/iphone11_1" />

    <ImageView
        android:id="@+id/itemImage1"
        android:layout_width="147dp"
        android:layout_height="173dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/item_image"
        app:layout_constraintEnd_toStartOf="@+id/itemImage2"
        app:layout_constraintStart_toEndOf="@+id/itemImage"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:srcCompat="@drawable/iphone6" />

    <ImageView
        android:id="@+id/itemImage2"
        android:layout_width="141dp"
        android:layout_height="173dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/item_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemImage1"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:srcCompat="@drawable/iphone6" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="423dp"
        android:layout_height="58dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/itemImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/addCbtn"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginStart="273dp"
        android:layout_marginLeft="273dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/btn"
        android:text="@string/add_to_cart"
        android:textColor="#FBF9F9"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="430dp"
        android:layout_height="389dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>